--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,10 @@
         <tomcat.deploy.url>http://localhost:${tomcat.port}/manager/text</tomcat.deploy.url>
         <!-- artifacts versions -->
         <tomcat7-maven-plugin.version>2.2</tomcat7-maven-plugin.version>
-        <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
+        <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
         <javaee-api.version>8.0</javaee-api.version>
         <junit.version>4.12</junit.version>
+        <mockito-all.version>1.10.19</mockito-all.version>
         <commons-httpclient.version>3.1</commons-httpclient.version>
         <maven-failsafe-plugin.version>2.19.1</maven-failsafe-plugin.version>
     </properties>
@@ -59,6 +60,7 @@
                         <version>${javaee-api.version}</version>
                         <scope>runtime</scope>
                     </dependency>
+
                 </dependencies>
             </plugin>
         </plugins>
@@ -71,7 +73,11 @@
             <version>${javax.servlet-api.version}</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <version>${commons-httpclient.version}</version>
+        </dependency>
         <!-- For test -->
         <dependency>
             <groupId>junit</groupId>
@@ -80,9 +86,10 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>commons-httpclient</groupId>
-            <artifactId>commons-httpclient</artifactId>
-            <version>${commons-httpclient.version}</version>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>${mockito-all.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
