--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <javaee-api.version>8.0</javaee-api.version>
         <junit.version>4.12</junit.version>
         <mockito-all.version>1.10.19</mockito-all.version>
+        <rest-assured.version>3.2.0</rest-assured.version>
         <commons-httpclient.version>3.1</commons-httpclient.version>
         <maven-failsafe-plugin.version>2.19.1</maven-failsafe-plugin.version>
     </properties>
@@ -89,6 +90,12 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>${mockito-all.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>${rest-assured.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
